--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -218,6 +218,23 @@
    		 $("#http_url_div").addClass("has-error");
    		 $("#http_url_div").focus();
    		 return false;
+   		}else{
+   			const strRegex = '^((https|http)://)'//(https或http):// 可有可无
+   			　　+ '(([0-9]{1,3}\\.){3}[0-9]{1,3}' // IP形式的URL- 3位数字.3位数字.3位数字.3位数字
+   			　　+ '|' // 允许IP和DOMAIN（域名）
+   			　　+ '(localhost)|'    //匹配localhost
+   			　　+ '([\\w_!~*\'()-]+\\.)*' // 域名- 至少一个[英文或数字_!~*\'()-]加上.
+   			　　+ '\\w+\\.' // 一级域名 -英文或数字 加上.
+   			　　+ '[a-zA-Z]{1,6})' // 顶级域名- 1-6位英文
+   			　　+ '(:[0-9]{1,5})?' // 端口- :80 ,1-5位数字
+   			　　+ '((/?)|' // url无参数结尾 - 斜杆或这没有
+   			　　+ '(/[\\w_!~*\'()\\.;?:@&=+$,%#-]+)+/?)$';//请求参数结尾- 英文或数字和[]内的各种字符
+   			　　const re = new RegExp(strRegex, 'i'); // 大小写不敏感
+   			　　if (!re.test(encodeURI($("#http_url").val()))) {
+	   			   $("#http_url_div").addClass("has-error");
+	   	   		   $("#http_url_div").focus();
+   			　　　　return false;
+   			　　}
    		}
     	
     	if('' != $("#http_args").val()){
