--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,7 +42,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">任务列表</a></li>
-              <li><a href="#">任务日志</a></li>
+              <li><a href="/listLogs">任务日志</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             <li><a href="#" id="logout">登出</a></li>
@@ -85,18 +85,20 @@
         <th>任务名称</th>
         <th>任务类型</th>
         <th>cron表达式</th>
-        <th>状态</th>
+        <th>任务状态</th>
         <th>上次执行时间</th>
+         <th>上次执行状态</th>
         <th>下次执行时间</th>
         <th>操作</th>
       </tr>
-	   <tr th:each="task : ${tasks.content}">
+	   <tr th:each="task : ${tasks.content}" th:class="${task.lastExeStatus == '0'?'danger':''}">
         <td th:text="${task.taskName}"></td>
         <td th:text="${task.taskType}"></td>
         <td th:text="${task.cron}"></td>
-        <td th:text="${task.taskState=='1'?'启动':'暂停'}"></td>
+        <td th:text="${task.taskState=='1'?'启动':'暂停'}" th:class="${task.taskState == '0'?'warning':''}"></td>
         <td th:text="${task.lastExeTime}"></td>
-        <td th:text="${task.nextExcTime}"></td>
+        <td th:text="${task.lastExeStatus=='1'?'成功':'失败'}" ></td>
+        <td th:text="${task.taskState=='1' ? task.nextExcTime:''}"></td>
         <td>
         <button type="button" class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="bottom" title="暂停任务" th:if="${task.taskState == '1'}" th:onclick="pauseTask([[${task.taskId}]],[[${task.taskName}]])" >
         <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
@@ -104,7 +106,7 @@
          <button type="button" class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="bottom" title="启动任务" th:if="${task.taskState == '0'}" th:onclick="startTask([[${task.taskId}]],[[${task.taskName}]])">
         <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </button>
-         <button type="button" class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="bottom" title="立即执行" th:onclick="exeTask([[${task.taskId}]],[[${task.taskName}]])">
+         <button type="button" class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="bottom" title="立即执行" th:onclick="excTask([[${task.taskId}]],[[${task.taskName}]])">
         <span class="glyphicon glyphicon-repeat" aria-hidden="true"></span>
         </button>
          <button type="button" class="btn btn-default btn-xs" data-toggle="tooltip" data-placement="bottom" title="删除任务" th:onclick="removeTask([[${task.taskId}]],[[${task.taskName}]])">
@@ -222,6 +224,20 @@
          			$("#queryForm").submit();
          		}else{
          			alert("删除任务失败！");
+         		}
+         	 });
+    	});
+    }
+    
+    function excTask(taskId,taskName) {
+    	showModal('确定执行','确定要立即执行‘'+taskName+'’任务吗？',function(){
+    		console.log('taskId:'+taskId)
+        	$.post('/excTask',{taskId:taskId},function(data){
+         		if("success" == data) {
+         			alert("执行任务成功！");
+         			$("#queryForm").submit();
+         		}else{
+         			alert("执行任务失败！");
          		}
          	 });
     	});
