--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,7 +53,7 @@
 		<div class="panel panel-default">
 		  <div class="panel-body">
 		   <form class="form-inline" method="get" action="/" id="queryForm">
-		      <input type="hidden" name="pageIndex" id="pageIndex" th:value="${pageIndex}">
+		      <input type="hidden" name="pageIndex" id="pageIndex" th:value="${1}">
 			  <div class="form-group has-feedback">
 			    <label for="taskName" class="control-label">任务名称</label>
 			    <input type="text" class="form-control input-content" id="taskName" name="taskName" placeholder="请输入任务名称" th:value="${taskName}">
