--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -3,10 +3,15 @@
     <head>
 	    <meta name="_csrf" th:content="${_csrf.token}"/>
 		<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-        <title>任务列表</title>
-        <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
-    	<script th:src="@{/js/bootstrap.min.js}"></script>
+        <title>任务日志</title>
+        
     	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" type="text/css" />
+    	<link th:href="@{/css/bootstrap-datetimepicker.min.css}" rel="stylesheet" type="text/css" />
+    	
+    	<script th:src="@{/js/jquery-3.6.0.min.js}"></script>
+    	<script th:src="@{/js/bootstrap.min.js}"></script>
+    	<script th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
+    	<script th:src="@{/js/locales/bootstrap-datetimepicker.zh-CN.js}"></script>
     	<style type="text/css">
     	body {
 		  padding-top: 20px;
@@ -49,9 +54,31 @@
         </div><!--/.container-fluid -->
       </nav>
       
-      <form class="form-inline" method="get" action="/listLogs" id="queryForm">
-      	<input type="hidden" name="pageIndex" id="pageIndex" th:value="${pageIndex}">
-      </form>
+      <div class="panel panel-default">
+		  <div class="panel-body">
+	      <form class="form-inline" method="get" action="/listLogs" id="queryForm">
+	      	<input type="hidden" name="pageIndex" id="pageIndex" th:value="${1}">
+	      	 <div class="form-group">
+	      	    <label for="taskId" class="control-label">定时任务</label>
+		      	<select class="form-control" name="taskId" id="taskId">
+		      	  <option value="">--请选择--</option>
+				  <option th:each="task : ${tasks}" th:value="${task.taskId}" th:text="${task.taskName}" th:selected="${task.taskId == taskId ? 'true':'false'}"></option>
+				</select>
+			</div>
+	      	 <div class="form-group">
+	      	    <label for="taskDate" class="control-label">执行日期</label>
+                <div class="input-group date form_date" data-date="" data-date-format="yyyy-mm-dd" data-link-field="taskDate" data-link-format="yyyy-mm-dd">
+                    <input class="form-control" size="16" type="text" id="taskDate" name="taskDate" th:value="${taskDate}" readonly>
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
+					<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                </div>
+	      	 </div>
+	      	 <div class="form-group">
+			  <button type="submit" class="btn btn-primary">查询</button>
+			 </div>
+	      </form>
+	      </div>
+      </div>
       
    	  <div class="panel panel-default">
 	  <!-- Table -->
@@ -118,14 +145,26 @@
     </form>
     </body>
     <script>
-	    $("#logout").click(function(){
-	    	$("#logoutForm").submit();
-	    });
-	    
-	    function queryLogs(pageIndex) {
-	    	$("#pageIndex").val(pageIndex);
-	    	$("#queryForm").submit();
-	    }
+    
+    $('.form_date').datetimepicker({
+        language:  'zh-CN',
+        weekStart: 1,
+        todayBtn:  1,
+		autoclose: 1,
+		todayHighlight: 1,
+		startView: 2,
+		minView: 2,
+		forceParse: 0
+    });
+    
+    $("#logout").click(function(){
+    	$("#logoutForm").submit();
+    });
+    
+    function queryLogs(pageIndex) {
+    	$("#pageIndex").val(pageIndex);
+    	$("#queryForm").submit();
+    }
     </script>
 </html>
     
