增加修改密码和最近5次执行时间

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -119,6 +119,14 @@
 	  </div>
 	</div>
 	
+	<div class="panel panel-default">
+	  <div class="panel-heading">
+	    <h3 class="panel-title">近5次执行时间:</h3>
+	  </div>
+	  <div class="panel-body" id="excTimeContent">
+	  </div>
+	</div>
+	
 	<div class="alert alert-warning" role="alert" id="testResult">
 	  <button type="button" class="close" aria-label="Close" id="testResultClose"><span aria-hidden="true">&times;</span></button>
 	  <strong>测试结果:</strong><br/>
@@ -191,11 +199,40 @@
         
         $('#saveCron').click(function(){
         	$('#cron').val(cronSelector.val());
+        	//触发change事件
+        	$('#cron').trigger("change");
+        	
         	$('#cronModal').modal('hide')
            /*  alert(cronSelector.val()); */
         	$("#cronDiv").removeClass("has-error");
         }); 
+        
+        nextTimes();
+       
     });
+     
+     function nextTimes(){
+     	var cronStr = $('#cron').val();
+     	console.log(cronStr);
+     	if(cronStr){
+     		var token = $("meta[name='_csrf']").attr("content");
+          	var header = $("meta[name='_csrf_header']").attr("content");
+          	$(document).ajaxSend(function(event, jqxhr, settings) {
+          		jqxhr.setRequestHeader(header, token);
+          	});
+          	$.get('/nextExcTimes?cron='+cronStr,function(data){
+          		console.log(data);
+          		var txt = "";
+          		for(let t of data) {
+          			txt = txt + t +"<br/>";
+          		}
+          		$('#excTimeContent').html(txt);
+          	});
+     	}
+     }
+     
+     $('input#cron').change(nextTimes);
+     
      $("#taskName").change(function(){
     	 if('' != $("#taskName").val()) {
     		 $("#taskNameDiv").removeClass("has-error");
