--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,7 +45,9 @@
               <li><a href="/listLogs">任务日志</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+            <li><a href="/toChpasswd" id="chapsswd">修改密码</a></li>
             <li><a href="#" id="logout">登出</a></li>
+            </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
