--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
     <head>
 	    <meta name="_csrf" th:content="${_csrf.token}"/>
 		<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-        <title>任务列表</title>
+        <title>定时任务管理-任务列表</title>
         <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
     	<script th:src="@{/js/bootstrap.min.js}"></script>
     	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" type="text/css" />
