--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -3,7 +3,7 @@
     <head>
 	    <meta name="_csrf" th:content="${_csrf.token}"/>
 		<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-        <title>任务日志</title>
+        <title>定时任务管理-任务日志</title>
         
     	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" type="text/css" />
     	<link th:href="@{/css/bootstrap-datetimepicker.min.css}" rel="stylesheet" type="text/css" />
