--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="_csrf" th:content="${_csrf.token}"/>
 <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
-<title>增加任务</title>
+<title>定时任务管理-增加任务</title>
 	<script th:src="@{/js/jquery-3.6.0.min.js}"></script>
   	<script th:src="@{/js/bootstrap.min.js}"></script>
   	<script th:src="@{/js/cron-selector.js}"></script>
