--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 	xmlns:th="https://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-<title>登录</title>
+<title>定时任务管理-登录</title>
 	<script th:src="@{/js/jquery-3.6.0.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" />
@@ -16,40 +16,35 @@
 </head>
 <body>
 	<div class="container">
+	
+	<p class="text-center h1">定时任务管理系统</p>
 		<div th:if="${param.error}" class="alert alert-warning alert-dismissible fade in" role="alert">
 		    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 			  <span aria-hidden="true">&times;</span>
 			</button>
-		  Invalid username and password.
+		  用户名或密码错误。
 		</div>
 		<div th:if="${param.logout}" class="alert alert-warning alert-dismissible fade in" role="alert">
 		    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 			  <span aria-hidden="true">&times;</span>
 			</button>
-		  You have been logged out.
+		  你已登出。
 		</div>
-		<form class="form-horizontal" th:action="@{/login}" method="post">
+		<form th:action="@{/login}" method="post">
 			<div class="form-group">
-				<label for="username" class="col-sm-2 control-label">用户名</label>
-				<div class="col-sm-6">
-					<input type="text" class="form-control" id="username"
+				<label for="username">用户名</label>
+				<input type="text" class="form-control" id="username"
 						name="username" placeholder="请输入用户名">
-				</div>
 			</div>
 
 			<div class="form-group">
-				<label for="password" class="col-sm-2 control-label">密码</label>
-				<div class="col-sm-6">
-					<input type="password" class="form-control" id="password"
+				<label for="password">密码</label>
+				<input type="password" class="form-control" id="password"
 						name="password" placeholder="请输入用户名密码">
-				</div>
 			</div>
-			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-default">登录</button>
-				</div>
-			</div>
+			<button type="submit" class="btn btn-primary">登录</button>
 		</form>
+		
 	</div>
 </body>
 </html>
