--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -101,10 +101,34 @@
 		  </div>
 		  
 		  <div id="shellParams">
-		  	<div class="form-group" id="shell_args_div">
-			    <label for="shell_args" class="col-sm-2 control-label">命令参数</label>
+		  	<div class="form-group" id="shell_host_div">
+			    <label for="shell_host" class="col-sm-2 control-label">主机地址</label>
 			    <div class="col-sm-10">
-			      <textarea class="form-control" rows="3" id="shell_args"></textarea>
+			       <input type="text" class="form-control" id="shell_host" placeholder="主机地址">
+			    </div>
+			  </div>
+			  <div class="form-group" id="shell_user_div">
+			    <label for="shell_user" class="col-sm-2 control-label">用户名</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control" id="shell_user" placeholder="用户名">
+			    </div>
+			  </div>
+			  <div class="form-group" id="shell_port_div">
+			    <label for="shell_port" class="col-sm-2 control-label">端口</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control" id="shell_port" placeholder="端口">
+			    </div>
+			  </div>
+			  <div class="form-group" id="shell_password_div">
+			    <label for="shell_password" class="col-sm-2 control-label">密码</label>
+			    <div class="col-sm-10">
+			      <input type="password" class="form-control" id="shell_password" placeholder="密码">
+			    </div>
+			  </div>
+			  <div class="form-group" id="shell_command_div">
+			    <label for="shell_command" class="col-sm-2 control-label">命令</label>
+			    <div class="col-sm-10">
+			      <textarea class="form-control" rows="3" id="shell_command"></textarea>
 			    </div>
 			  </div>
 		  </div>
@@ -159,7 +183,7 @@
 	<div class="alert alert-warning" role="alert" id="testResult">
 	  <button type="button" class="close" aria-label="Close" id="testResultClose"><span aria-hidden="true">&times;</span></button>
 	  <strong>测试结果:</strong><br/>
-	  <span id="resultContent"></span>
+	  <span id="resultContent" style="white-space:pre-line"></span>
 	</div>
 </div>
 
@@ -203,9 +227,19 @@
 	    		 $("#sqlParams").hide();
 	    		 break;
 	    	 case 'shell':
+	    		 var taskParams = $("#params").val();
+	    		 if(taskParams){
+	    			 var json = JSON.parse(taskParams);
+	        		 console.log(json);
+	        		 $("#shell_host").val(json['host']);
+	        		 $("#shell_user").val(json['user']);
+	        		 $("#shell_port").val(json['port']);
+	        		 $("#shell_password").val(json['password']);
+	        		 $("#shell_command").val(json['command']);
+	    		 }
 	    		 $("#httpParams").hide();
 	    		 $("#sqlParams").hide();
-	    		 $("#shell_args").val($("#params").val())
+	    		 
 	    		 break;
 	    	 case 'sql':
 	    		 $("#httpParams").hide();
@@ -397,20 +431,45 @@
      	 });
      }
      
+     function shellValidate() {
+    	 if(''==$("#shell_host").val()){
+      		 $("#shell_host_div").addClass("has-error");
+    		 $("#shell_host_div").focus();
+    		 return false;
+      	 }
+    	 if(''==$("#shell_user").val()){
+      		 $("#shell_user_div").addClass("has-error");
+    		 $("#shell_user_div").focus();
+    		 return false;
+      	 }
+    	 if(''==$("#shell_port").val()){
+      		 $("#shell_port_div").addClass("has-error");
+    		 $("#shell_port_div").focus();
+    		 return false;
+      	 }
+    	 if(''==$("#shell_password").val()){
+      		 $("#shell_password_div").addClass("has-error");
+    		 $("#shell_password_div").focus();
+    		 return false;
+      	 }
+    	 if(''==$("#shell_command").val()){
+      		 $("#shell_command_div").addClass("has-error");
+    		 $("#shell_command_div").focus();
+    		 return false;
+      	 }
+    	 return true
+     }
      function shellTest() {
+    	if(!shellValidate()) {
+      		return;
+      	}
     	var token = $("meta[name='_csrf']").attr("content");
       	var header = $("meta[name='_csrf_header']").attr("content");
       	$(document).ajaxSend(function(event, jqxhr, settings) {
       		jqxhr.setRequestHeader(header, token);
       	});
-      	
-      	if(''==$("#shell_args").val()){
-      		 $("#shell_args_div").addClass("has-error");
-    		 $("#shell_args_div").focus();
-    		 return;
-      	}
-      	
-      	 $.post('/testTask',{taskName:$("#taskName").val(),taskType:$("#taskType").val(),params:$("#shell_args").val()},function(data){
+    	var shellParams = {"host":$("#shell_host").val(),"user":$("#shell_user").val(),"port":$("#shell_port").val(),"password":$("#shell_password").val(),"command":$("#shell_command").val()};
+      	 $.post('/testTask',{taskName:$("#taskName").val(),taskType:$("#taskType").val(),params:JSON.stringify(shellParams)},function(data){
       		console.log(data); 
       		$("#testResult").show();
       		$("#resultContent").text(data);
@@ -491,13 +550,9 @@
     		 console.log($("#params").val());
     		 //return;
     		 $("#taskForm").submit();
-    	 }else if('shell' == $("#taskType").val()){
-    		 if(''==$("#shell_args").val()){
-    			 $("#shell_args_div").addClass("has-error");
-        		 $("#shell_args_div").focus();
-        		 return;
-          	 }
-    		 $("#params").val($("#shell_args").val());
+    	 }else if('shell' == $("#taskType").val() && shellValidate()){
+    		 var shellParams = {"host":$("#shell_host").val(),"user":$("#shell_user").val(),"port":$("#shell_port").val(),"password":$("#shell_password").val(),"command":$("#shell_command").val()};
+    		 $("#params").val(JSON.stringify(shellParams));
     		 $("#taskForm").submit();
     	 }else if('sql' == $("#taskType").val() && sqlValidate()){
     		var sqlParams = {"jdbcUrl":$("#jdbc_url").val(),"username":$("#db_username").val(),"password":$("#db_password").val(),"sql":$("#sql").val()}
